--- a/index.html
+++ b/index.html
@@ -1,37 +1,17 @@
-<html>
-<head>
-	<title>Calliope Ear Training</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="./node_modules/soundfont-player/dist/soundfont-player.js"></script>
-	<script src="./script.js"></script>
-</head>
-
-<body>
-	<textarea id="progressions" autofocus="true" rows="10">1: 1 4 5
-1: 1 5 4</textarea>
-	<div>
-		<button onclick="test()">Test</button>
-		<div id="answer"></div>
-	</div>
-	<!-- <div>
-		<span class="panel">
-			<div class="chord-progression">
-				<div class="chord-icon">I</div>
-				<div class="chord-icon">IV</div>
-				<div class="chord-icon">V</div>
-				<div class="chord-icon">I</div>
-			</div>
-		</span>
-		<span class="chord-progression"></span>
-	</div>
-	<div class="stack">
-		<button class="chord-button">I</button>
-		<button class="chord-button">ii</button>
-		<button class="chord-button">iii</button>
-		<button class="chord-button">IV</button>
-		<button class="chord-button">V</button>
-		<button class="chord-button">vi</button>
-		<button class="chord-button">vii</button>
-	</div> -->
-</body>
+<!doctype html>
+<html lang="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calliope Ear Training</title>
+    <style type="text/css">
+      body {
+        background-color: hsl(0, 0%, 11%);
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
